--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,7 +31,10 @@ body {
   .text-input  {
     border: 1px solid #858282;
   }
-
+  .action-bar{
+    display: flex;
+    justify-content: space-between;
+  }
   .input-section{
     display: flex;
     flex-direction: column;
@@ -41,13 +44,21 @@ body {
     font-size: small;
     color: #db3447;
   }
-  .add-button {
+  .add-button,
+  .filter-button {
     padding: 8px 16px;
-    background-color: #2ecc71;
     color: #fff;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+  }
+  .add-button{
+    background-color: #2ecc71;
+  }
+  .filter-button{
+    background-color: #f5f5f5;
+    color: #3e1152;
+    font-weight: 800;
   }
   .add-button:disabled{
     background-color: #2747349c;
@@ -99,7 +110,20 @@ body {
     padding: 20px;
     border-radius: 4px;
   }
-  
+  .filter-panel{
+    background-color: #d8d7d789;
+    border: 1px solid #816767;
+    display: block;
+    padding: 10px 12px;
+    min-width: 200px;
+    border-radius: 4px;
+    float: right;
+    z-index: 1;
+  }
+  .filter-header {
+    margin-bottom: 8px;
+    font-weight: 400;
+  }
   .close-button {
     position: absolute;
     top: 10px;
